ID-79 Fix more links not wrapping onto two lines

--- a/docs/assets/external-homepage/external-homepage-prod.less
+++ b/docs/assets/external-homepage/external-homepage-prod.less
@@ -692,7 +692,7 @@ only screen and (                min-resolution: 2dppx) {
     display: flex;
     flex-wrap: wrap;
     > li {
-      flex: 1;
+      flex: 1 0 auto;
     }
   }
 }
